deploy/k8s/service/product/product-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: shopping
  labels:
    app.kubernetes.io/name: product-svc
    app.kubernetes.io/version: v1.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: product
    app.kubernetes.io/version: v1.0
  ports:
    - name: http
      port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: product
  namespace: shopping
  labels:
    app.kubernetes.io/name: product
    app.kubernetes.io/version: v1.0
spec:
  serviceName: product-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: product
      app.kubernetes.io/version: v1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: product
        app.kubernetes.io/version: v1.0
    spec:
      containers:
        - name: product
          image: localhost:5000/go-shopping-poc/product:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: product-ingress
#   namespace: shopping
#   labels:
#     app.kubernetes.io/name: product-ingress
#     app.kubernetes.io/token: v1.0
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
# spec:
#   rules:
#     - host: pocstore.local
#       http:
#         paths:
#           - path: /api/v1/products
#             pathType: Prefix
#             backend:
#               service:
#                 name: product-svc
#                 port:
#                   number: 80
#   tls:
#     - hosts:
#         - pocstore.local
#       secretName: pocstorelocal-tls


# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: shopping
  labels:
    app.kubernetes.io/name: product-ingress
    app.kubernetes.io/token: v1.0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure,web"
    traefik.ingress.kubernetes.io/enable-rules: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: pocstore.local
    http:
      paths:
        - path: /api/v1
          pathType: Prefix
          backend:
            service:
              name: product-svc
              port:
                number: 80
        - path: /api/v1/products
          pathType: Prefix
          backend:
            service:
              name: product-svc
              port:
                number: 80
  tls:
    - hosts:
      - pocstore.local
      secretName: pocstorelocal-tls
